# whip

./: README.rst  pyproject.toml
examples/: authors.py
src/whip/: __init__.py  lasso.py  properties.py
